--- a/05-data_manipulation.Rmd
+++ b/05-data_manipulation.Rmd
@@ -743,10 +743,10 @@ It is common sense, that if we want to join two tables, there must be some rules
 
 6. For each stage, create a variable called `row_id`, which essentially represents the number of 5 sec windows in each stage. See Recipe \@ref(WRANGLE-NEW-VARIABLES) and \@ref(WRANGLE-SUMMARIZE-GROUPBY).
 
-7. For each stage, remove the data between 3:00 to 3:30min. See Reciple \@ref(WRANGLE-SUMMARIZE-GROUPBY) and \@ref(WRANGLE-FILTER-KEEP-NUMERIC).
+7. For each stage, remove the data between 3:00 to 3:30min. See Recipe \@ref(WRANGLE-SUMMARIZE-GROUPBY) and \@ref(WRANGLE-FILTER-KEEP-NUMERIC).
 
-8. For each stage, keep the last six rows of data. See Reciple \@ref(WRANGLE-SUMMARIZE-GROUPBY) and \@ref(WRANGLE-SLICE).
+8. For each stage, keep the last six rows of data. See Recipe \@ref(WRANGLE-SUMMARIZE-GROUPBY) and \@ref(WRANGLE-SLICE).
 
-9. For each stage, calculate for all variables for the mean of the last six rows of data. See Reciple \@ref(WRANGLE-SUMMARIZE-GROUPBY) and \@ref(WRANGLE-SUMMARIZE-GLOBAL).
+9. For each stage, calculate for all variables for the mean of the last six rows of data. See Recipe \@ref(WRANGLE-SUMMARIZE-GROUPBY) and \@ref(WRANGLE-SUMMARIZE-GLOBAL).
 
-10. Save this cleaned data set into the `data/` folder called `Athlete_1_treadmill_clean.xlsx`. See Reciple \@ref(INPUT-EXPORT)
+10. Save this cleaned data set into the `data/` folder called `Athlete_1_treadmill_clean.xlsx`. See Recipe \@ref(INPUT-EXPORT)
