added more details to assignment

--- a/08-Assignment.Rmd
+++ b/08-Assignment.Rmd
@@ -92,26 +92,28 @@ curve_intersect <- function (curve1, curve2, empirical = TRUE, domain = NULL)
 
 ## Import data (Task 1)
 
+### Import the sheet with the Vo2 data
 dat_vo2 <-  read.xlsx (xlsxFile = "data/XXX.xlsx",
                        sheet = "XXX")
 
+### Import the sheet with the lactate data
 dat_stage <-  read.xlsx (xlsxFile = "data/XX.xlsx",
                        sheet = "XXX")
 
 ## Analyze VO2 data ----------------------------------------------------------------------
 
-### Rename column names (Task 2)
+### Rename column names of Vo2 data (Task 2)
 
 new_names <- c()
 
 colnames (dat_vo2)  <- new_names
 
-### Remove first row 
+### Remove first row of Vo2 data
 
 dat_vo2 <- dat_vo2 %>% 
   slice (-c(1))
 
-### Convert column type (Task 3)
+### Convert column type of Vo2 data (Task 3)
 
 dat_vo2 <-  dat_vo2 %>%
   mutate (bf = XXX (bf),
@@ -128,12 +130,12 @@ dat_vo2 <-  dat_vo2 %>%
             as.period(unit = "sec") %>% 
             as.numeric ()) 
 
-### Create a "stage" variable
+### Create a "stage" variable in Vo2 data
 
 dat_vo2 <- dat_vo2 %>%
   mutate (stage = cut_interval(time, length = 210, labels = FALSE))
 
-### Calculate average 30s data per stage (Task 4)
+### Calculate average 30s data per stage of Vo2 data (Task 4)
 
 dat_vo2_summ <- dat_vo2 %>%
   group_by(XXX) %>% # for each group
@@ -142,7 +144,7 @@ dat_vo2_summ <- dat_vo2 %>%
   slice_tail (n = XXX)%>% # keep last 30 sec per stage
   summarise_at (vars(bf:hr), mean)
 
-### Combine stage and average data (Task 5)
+### Combine Vo2 staged data with lactate data (Task 5)
 
 dat_vo2_comb <- dat_vo2_summ %>%
   inner_join(dat_stage, by = "XXX")
@@ -196,7 +198,7 @@ write.xlsx(x = XXX,
            file = "data/vo2_table.xlsx")
 
 ## Bonus Codes to help you -------------------------------------------------
-### Click on everything and run
+### Click on everything below and run
 
 
 ### Get VO2 max , VO2 max relative
