--- a/05-data_manipulation.Rmd
+++ b/05-data_manipulation.Rmd
@@ -274,6 +274,13 @@ str(dat_vo2$time)
 
 ### Solution
 
+First, let me create a carbon copy of the data `dat_vo2`, so that I can modify the original data, and keep the carbon copy for explanation and illustration.
+
+```{r}
+dat_vo2_copy <- dat_vo2 
+```
+
+
 Use the `mutate()` function and the `as.numeric` function. You will learn the `mutate ()` function more in Recipe \@ref(WRANGLE-NEW-VARIABLES).
 
 ```{r}
@@ -297,30 +304,12 @@ dat_vo2 %>%
 
 ### Discussion
 
-Notice in the function above, I chained a series of steps together, using the pipe, `%>%`, function. Alternatively, I could do it in separate steps, and we can take a look at how each step changed the appearance of the `time` variable.  
+Notice in the function above, I chained a series of steps together, using the pipe, `%>%`, function. Alternatively, I could do it in separate steps, and we can take a look at how each step changed the appearance of the `time` variable. Let me illustrate each step using the carbon copy data `dat_vo2_copy`.
 
-```{r, echo = FALSE}
-dat_vo2 <-  read.xlsx (xlsxFile = "data/treadmill_pt4.xlsx",
-                   sheet = "raw")
-
-new_names <- c("time", "bf", "vo2_norm", "rer", "vo2", "vco2", "ve", "hr")
-
-colnames (dat_vo2)  <- new_names
-
-dat_vo2 <- dat_vo2 %>% 
-  slice (-(1)) %>%
-  mutate (bf = as.numeric(bf),
-          vo2_norm = as.numeric(vo2_norm),
-          rer = as.numeric(rer),
-          vo2 = as.numeric(vo2),
-          vco2 = as.numeric(vco2),
-          ve = as.numeric(ve),
-          hr = as.numeric(hr))
-```
 
 ```{r }
 # First, removes whitespaces around the time variable
-time_mutate <- dat_vo2 %>%
+time_mutate <- dat_vo2_copy %>%
   mutate (time = time %>% 
                  str_squish()) 
 ```
@@ -334,7 +323,7 @@ time_mutate %>%
 ```{r }
 # Second, convert to minutes and seconds
 
-time_mutate <- dat_vo2 %>%
+time_mutate <- dat_vo2_copy %>%
   mutate (time = time %>% 
                  str_squish()%>%  
                  ms())
@@ -350,7 +339,7 @@ time_mutate %>%
 ```{r }
 # Third, converts entirely to seconds
 
-time_mutate <- dat_vo2 %>%
+time_mutate <- dat_vo2_copy %>%
   mutate (time = time %>% 
                  str_squish()%>%  
                  ms() %>%
@@ -366,7 +355,7 @@ time_mutate %>%
 ```{r }
 # Fourth, strips the S symbol to make it a number, and assign it to object
 
-time_mutate <- dat_vo2 %>%
+time_mutate <- dat_vo2_copy %>%
   mutate (time = time %>% 
                  str_squish()%>%  
                  ms() %>%
@@ -381,16 +370,7 @@ time_mutate %>%
   knitr::kable (digits = 2)
 ```
 
-```{r, echo = FALSE}
 
-dat_vo2 <- dat_vo2 %>%
-  mutate (time = time %>% 
-            str_squish() %>% # function strips any whitespaces
-            ms() %>% # convert to minutes and seconds
-            as.period(unit = "sec") %>% # converts entirely to seconds
-            as.numeric ()) # strips the S symbol to make it a number
-
-```
 ## Split Numeric Variable into Categories {#WRANGLE-NUMERIC-CATEGORY}
 
 ### Problem
